--- a/functions/views/funwork.ejs
+++ b/functions/views/funwork.ejs
@@ -18,25 +18,19 @@
                 <div class="container">
     
                     <!-- Project One -->
+                  
+                    <%  funwork.forEach(function(isi) { var data = isi.val(); %>
                     <div class="row pt-5">
                         <div class="col-md-8">
-                            <img class="img-fluid rounded mb-3 mb-md-0" src="img/contoh project1.png" alt="" width="100%" height="50%">
+                            <img class="img-fluid rounded mb-3 mb-md-0" src="https://firebasestorage.googleapis.com/v0/b/cromosom1.appspot.com/o/funwork%2F<%= data.foto %>?alt=media" alt="" width="100%" height="50%">
                         </div>
                         <div class="col-md-4">
-                            <h3 class="reds" style="color:black">Qahwa Gayo</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium veniam exercitationem expedita laborum at voluptate. Labore, voluptates totam at aut nemo deserunt rem magni pariatur quos perspiciatis atque eveniet unde.</p>
+                            <h3 class="reds" style="color:black"><%= data.nama %></h3>
+                            <p><%= data.keterangan %></p>
                         </div>
                     </div>
-                    <!-- project two -->
-                    <div class="row pt-5">
-                        <div class="col-md-8">
-                            <img class="img-fluid rounded mb-3 mb-md-0" src="img/contoh project1.png" alt="" width="100%" height="50%">
-                        </div>
-                        <div class="col-md-4">
-                            <h3 class="reds" style="color:black">Qahwa Gayo</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium veniam exercitationem expedita laborum at voluptate. Labore, voluptates totam at aut nemo deserunt rem magni pariatur quos perspiciatis atque eveniet unde.</p>
-                        </div>
-                    </div>
+                    <%  }); %>  
+                    
                 </div>
             </div>
             <!-- Content End -->
