--- a/functions/views/about.ejs
+++ b/functions/views/about.ejs
@@ -39,11 +39,10 @@
                     <h3 class="letterspace">SERVICES</h3>
                 </div>
                 <div class="col-md-12 pb-5 row servies">
-                        <div class="miring mx-2 p-1">Branding</div>
-                        <div class="miring mx-2 p-1">Web Developer</div>
-                        <div class="miring mx-2 p-1">Layout</div>
-                        <div class="miring mx-2 p-1">adveristing</div>
-                        <div class="miring mx-2 p-1">paciking</div>
+                        <%  service.forEach(function(isi) { var data = isi.val(); %>
+                            <div class="miring mx-2 pt-4 pb-4"><%= data.nama %></div>
+                        <%  }); %>                         
+                                            
                 </div>      
             </div>
         </div>
