--- a/functions/views/index.ejs
+++ b/functions/views/index.ejs
@@ -20,43 +20,22 @@
 
         <div class="text-center text-lg-left contents">
 
+            <%  recent.forEach(function(isi) { var data = isi.val(); %>
             <div class="row">
                  
                 <div class="col-12 mb-0 homegambar nopadding">                   
                     <a href="/workdetail">
-                        <img class="img-fluid img-responsive gmbr" src="img/contoh project1.png" alt="">
+                        <img class="img-fluid img-responsive gmbr" src="https://firebasestorage.googleapis.com/v0/b/cromosom1.appspot.com/o/work%2F<%= data.foto %>?alt=media" alt="<%= data.nama %>">
                     
                         <div class="overlay">
-                            <h3 class="text ml-2">Qahwa Gayo</h3>
+                            <h3 class="text ml-2"><%= data.nama %></h3>
                         </div>
                     </a>
                 </div>
                       
             </div>
-            <div class="row">
-                 
-                    <div class="col-12 mb-0 homegambar nopadding">                   
-                        <a href="/workdetail">
-                            <img class="img-fluid img-responsive gmbr" src="img/contoh project1.png" alt="">
-                        </a>
-                        <div class="overlay">
-                            <h3 class="text ml-2">Qahwa Gayo</h3>
-                        </div>
-                    </div>
-                          
-                </div>
-                <div class="row">
-                 
-                        <div class="col-12 mb-0 homegambar nopadding">                   
-                            <a href="/workdetail">
-                                <img class="img-fluid img-responsive gmbr" src="img/contoh project1.png" alt="">
-                            </a>
-                            <div class="overlay">
-                                <h3 class="text ml-2">Qahwa Gayo</h3>
-                            </div>
-                        </div>
-                              
-                    </div>
+            <%  }); %>
+            
             <!-- <div class="row">
                     <div class="nopadding grid">
                             <figure class="effect-zoe mb-0">
