workdetail view + fix error routing

--- a/functions/views/index.ejs
+++ b/functions/views/index.ejs
@@ -24,7 +24,7 @@
             <div class="row">
                  
                 <div class="col-12 mb-0 homegambar nopadding">                   
-                    <a href="/workdetail">
+                    <a href="/workdetail/<%= isi.key %>">
                         <img class="img-fluid img-responsive gmbr" src="https://firebasestorage.googleapis.com/v0/b/cromosom1.appspot.com/o/work%2F<%= data.foto %>?alt=media" alt="<%= data.nama %>">
                     
                         <div class="overlay">
