--- a/functions/views/templates/header.ejs
+++ b/functions/views/templates/header.ejs
@@ -1,7 +1,7 @@
 <!-- Header Section -->
 <header class="container">
     <div class="site-heading text-center d-none d-lg-block">
-        <a href="/"><img class="site-logo pt-3" src="img/logo.png" ></a>
+        <a href="/"><img class="site-logo pt-3" src="<% if (page === 'Workdetail') { %>../<% } %>img/logo.png" ></a>
     </div>
         
     <nav class="navbar navbar-expand-lg navbar-light bg-white container col-xl-5 col-lg-6 col-md-8 text-center">
