--- a/functions/views/work.ejs
+++ b/functions/views/work.ejs
@@ -22,7 +22,7 @@
                         
                             <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 nopadding">
                                 <div class="workgambar">                   
-                                        <a href="/workdetail">
+                                        <a href="/workdetail/<%= isi.key %>">
                                             <img alt="<%= data.nama %>" class="img-fluid img-responsive workimage nopadding" src="https://firebasestorage.googleapis.com/v0/b/cromosom1.appspot.com/o/work%2F<%= data.foto %>?alt=media">
                                             
                                             <div class="overlay">
