--- a/functions/views/workdetail.ejs
+++ b/functions/views/workdetail.ejs
@@ -19,11 +19,11 @@
                     <!-- Project One -->
                     <div class="row pt-5">
                         <div class="col-md-8">
-                            <img class="img-fluid rounded mb-3 mb-md-0" src="img/contoh project1.png" alt="" width="100%" height="50%">
+                            <img width="100%" height="50%" class="img-fluid rounded mb-3 mb-md-0" src="https://firebasestorage.googleapis.com/v0/b/cromosom1.appspot.com/o/work%2F<%= workdetail.foto %>?alt=media" alt="<%= workdetail.nama %>" >
                         </div>
                         <div class="col-md-4">
-                            <h3 class="reds" style="color:black">Qahwa Gayo</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium veniam exercitationem expedita laborum at voluptate. Labore, voluptates totam at aut nemo deserunt rem magni pariatur quos perspiciatis atque eveniet unde.</p>
+                            <h3 class="reds" style="color:black"><%= workdetail.nama %></h3>
+                            <p><%= workdetail.keterangan %></p>
                         </div>
                     </div>
     
