--- a/functions/views/templates/admin_navbar.ejs
+++ b/functions/views/templates/admin_navbar.ejs
@@ -9,15 +9,16 @@
 
 
     <!-- Navbar -->
-    <ul class="navbar-nav ml-auto ">
-        
+    
+    <ul class="navbar-nav ml-auto ">   
         <li class="nav-item dropdown no-arrow">
-        <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <i class="fas fa-user-circle fa-fw"></i>
-        </a>
-        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown">
-            <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">Logout</a>
-        </div>
+            <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <i class="fas fa-user-circle fa-fw"></i>
+            </a>        
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown">
+                <p id="emailTxt" class="dropdown-item" href="#">Email</p>
+                <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">Logout</a>
+            </div>
         </li>
     </ul>
 
