--- a/functions/views/templates/header.ejs
+++ b/functions/views/templates/header.ejs
@@ -21,7 +21,7 @@
                     <li class="nav-item  <% if (page === 'Contact') { %> active contact  <% } %>">
                         <a class="nav-link" href="/contact">contact</a>
                     </li>
-                    <li class="nav-item  <% if (page === 'Funwork') { %> active funwork  <% } %>">
+                    <li class="nav-item  <% if (page === 'Funwork') { %> active artwork  <% } %>">
                         <a class="nav-link" href="/funwork">Funwork</a>
                     </li>
                 </ul>
