--- a/functions/views/admin_script.ejs
+++ b/functions/views/admin_script.ejs
@@ -70,4 +70,16 @@
         });
     }
 
+    function slugify(string) {
+      return string
+        .toString()
+        .trim()
+        .toLowerCase()
+        .replace(/\s+/g, "-")
+        .replace(/[^\w\-]+/g, "")
+        .replace(/\-\-+/g, "-")
+        .replace(/^-+/, "")
+        .replace(/-+$/, "");
+    }
+
 </script>
