--- a/functions/views/admin_edit_funwork.ejs
+++ b/functions/views/admin_edit_funwork.ejs
@@ -10,7 +10,7 @@
 </head>
 <style>
     .foto-preview{
-        max-height: 150px;
+        max-height: 200px;
     }
 
     .foto-table{
@@ -75,7 +75,10 @@
                             <td>
                                 <% if (data.foto !== "") { %>
                                     <% for(var i = 0; i < data.foto.length; i++) { var obj = data.foto[i] %>
-                                        <img  alt="<%= obj %>" class="img-thumbnail foto-table" src="https://firebasestorage.googleapis.com/v0/b/cromosom1.appspot.com/o/funwork%2F<%= obj %>?alt=media">
+                                        <a href="#imgModal" data-toggle="modal" data-img-name="<%= obj %>" data-nama="<%= isi.key %>">
+                                            <img  alt="<%= obj %>" class="img-thumbnail foto-table" src="https://firebasestorage.googleapis.com/v0/b/cromosom1.appspot.com/o/funwork%2F<%= isi.key %>%2F<%= obj %>?alt=media">
+                                        </a>
+                                        
                                     <% } %>
                                 <% } else {%>
                                     <p>Tidak Ada Foto</p>
@@ -119,13 +122,13 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <img id="image-preview" alt="Foto" class="img-thumbnail foto-preview"/>
+                    <div class="gallery"></div>
                     <br> 
                     <progress value="0" max="100" id="uploader"></progress>
                     <br>
-                    <!-- <input type="file" accept="image/*" id="gambar" placeholder="Pilih Foto" onchange="previewImage();" multiple> -->
+                    
                     <input type="file" accept="image/*" multiple id="gambar">
-                    <div class="gallery"></div>
+                   
                 </div>
                     
                 
@@ -140,11 +143,91 @@
           </div>
         </div>
       </div>
+
+      <div class="modal" id="imgModal">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                    <h4 id="judul" class="modal-title">Modal header</h4>
+                    <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                    
+                </div>
+                <div class="modal-body">                    
+                    <div class="form-group">
+                        <img id="image-preview" alt="Foto" class="img-thumbnail foto-preview"/>
+                        <br> 
+                        <progress value="0" max="100" id="uploader"></progress>
+                        <br>
+                        <input type="file" accept="image/*" id="gambarPrev" placeholder="Pilih Foto" onchange="previewImage();">                        
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button id="konfirmasi"  type="button" class="btn btn-primary">Konfirmasi</button>
+                    <button data-dismiss="modal" type="button" class="btn btn-default">Batal</button>
+                  
+                </div>
+              </div>
+            </div>
+          </div>
   <!-- /#wrapper -->
 
   
   <%- include('admin_script'); -%>
   <script>
+        $('#imgModal').on('show.bs.modal', function(e) {
+            let foto, typeFoto;
+            let imgName = $(e.relatedTarget).data('img-name');
+            let nama = $(e.relatedTarget).data('nama');
+
+            let judulTxt = $(e.currentTarget).find('h4[id="judul"]');            
+            let funworkImg = $(e.currentTarget).find('input[id="gambarPrev"]');
+            let imgPreview = $(e.currentTarget).find('img[id="image-preview"]');
+            let konfirmasiBtn = $(e.currentTarget).find('button[id="konfirmasi"]');
+            let uploaderProg = $(e.currentTarget).find('progress[id="uploader"]');
+
+            judulTxt.text("Ubah Gambar");
+            
+            imgPreview.attr('src',"https://firebasestorage.googleapis.com/v0/b/cromosom1.appspot.com/o/funwork%2F"+nama+ "%2F"+ imgName + "?alt=media");
+
+            funworkImg.change(function(e){
+                
+                foto = e.target.files[0];
+                let filePath = funworkImg.val(); 
+                typeFoto = filePath.substr(filePath.lastIndexOf('.')+1,filePath.length);
+               
+            });
+
+            konfirmasiBtn.click(function(){
+                if(foto){
+                    let storageRef = storage.ref('funwork/'+nama+"/"+imgName);
+                    let uploadTask = storageRef.put(foto);
+                    
+                    uploadTask.on('state_changed',
+
+                    function progress(snapshot){
+                        let percentage = (snapshot.bytesTransferred / snapshot.totalBytes) *100;
+                        uploaderProg.val(percentage);
+
+                    },
+                    function error(err){
+                        alert('Terjadi Kesalahan !');
+                        
+                    },
+
+                    function complete(){                                                                        
+                    
+                            alert('Data berhasil disimpan !');
+                            location.href="/admin_edit_funwork"
+                        
+                        
+                        
+                    });
+                }else{
+                    alert('Tidak ada gambar yang dipilih!')
+                }
+                
+            });
+        });
        
        $('#dataModal').on('show.bs.modal', function(e) {
             let dataObj, foto, namaurl;
@@ -178,7 +261,7 @@
           
             
             if(namaFoto != ""){
-                imgPreview.attr('src',"https://firebasestorage.googleapis.com/v0/b/cromosom1.appspot.com/o/funwork%2F"+ namaFoto + "?alt=media")
+                imgPreview.attr('src',"https://firebasestorage.googleapis.com/v0/b/cromosom1.appspot.com/o/funwork%2F"+ namaFoto + "?alt=media");
             }
             
 
@@ -205,10 +288,6 @@
 
             funworkImg.change(function(e){
                 
-                // foto = e.target.files;
-                // let filePath = funworkImg.val(); 
-                // typeFoto = filePath.substr(filePath.lastIndexOf('.')+1,filePath.length);
-                // console.log("File Extension ->-> "+typeFoto);
                 $('div.gallery').empty();
                 imagesPreview(this, 'div.gallery');
                 foto = e.target.files;
@@ -219,20 +298,11 @@
             konfirmasiBtn.click(function(){
                 if(action == 'add'){
                     nama = namaTxt.val();
-                    keterangan = keteranganTxt.val();
-                    // if(funworkImg.val() != ""){
-                    //     namaFoto = nama + '.' + typeFoto;
-                    // }
-                    
+                    keterangan = keteranganTxt.val();              
+
                     namaurl = slugify(nama);
-
-
-                    namaFoto = {};
-             
-            
-
-                    
-                    //alert(foto.length);
+                    namaFoto = {};                         
+                                        
                     if(foto){
                         var filesAmount = foto.length;
 
@@ -244,7 +314,7 @@
                             
                             
                         }
-                        // alert(JSON.stringify(namaFoto));
+                       
                     }
 
                     db.ref('/funwork/'+namaurl).set({                                            
@@ -390,7 +460,7 @@
        function previewImage() {
             document.getElementById("image-preview").style.display = "block";
             var oFReader = new FileReader();
-            oFReader.readAsDataURL(document.getElementById("gambar").files[0]);
+            oFReader.readAsDataURL(document.getElementById("gambarPrev").files[0]);
 
             oFReader.onload = function(oFREvent) {
             document.getElementById("image-preview").src = oFREvent.target.result;
@@ -410,7 +480,7 @@
                     reader.onload = function(event) {
 
                         var gambar =  $($.parseHTML('<img>')).attr('src', event.target.result);
-                        gambar.attr('class', 'img-thumbnail foto-preview');
+                        gambar.attr('class', 'img-thumbnail foto-table');
                         gambar.appendTo(placeToInsertImagePreview);
 
                     }
