--- a/functions/views/funwork.ejs
+++ b/functions/views/funwork.ejs
@@ -22,7 +22,35 @@
                     <%  funwork.forEach(function(isi) { var data = isi.val(); %>
                     <div class="row pt-5">
                         <div class="col-md-8">
-                            <img class="img-fluid rounded mb-3 mb-md-0" src="https://firebasestorage.googleapis.com/v0/b/cromosom1.appspot.com/o/funwork%2F<%= data.foto %>?alt=media" alt="" width="100%" height="50%">
+                                <% if (data.foto !== "") { %>
+                                    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                                       
+                                        <div class="carousel-inner">
+                                            <% for(var i = 0; i < data.foto.length; i++) { var obj = data.foto[i]; if (obj !== undefined){ %>
+                                    
+                                                <div class="carousel-item<% if (i === 0) { %> active <% } %>">
+                                                    <img alt="<%= obj %>" class="img-responsive center-block" src="https://firebasestorage.googleapis.com/v0/b/cromosom1.appspot.com/o/funwork%2F<%= isi.key %>%2F<%= obj %>?alt=media">
+                                                </div>
+                                                
+                                            <% }} %>
+                                            
+                                           
+                                        </div>
+                                        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                            <span class="sr-only">Previous</span>
+                                        </a>
+                                        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                            <span class="sr-only">Next</span>
+                                        </a>
+                                    </div>
+                                   
+                                <% } else {%>
+                                    <p>Tidak Ada Foto</p>
+                                <% } %>
+                                
+                            
                         </div>
                         <div class="col-md-4">
                             <h3 class="reds" style="color:black"><%= data.nama %></h3>
